Project

General

Profile

Actions

Bug #26957

closed

s3 returns MalformedXML when PutCORS with a invalid MaxAgeSeconds argument

Added by Chang Liu over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

amazon s3:

DEBUG: Sending request method_string='PUT', uri='/?cors', headers={'content-type': 'application/xml', 'content-md5': 'geF9hvrm0nEhonXgMjwa1w==', 'x-amz-date': '20180817T082915Z', 'Authorization': 'AWS4-HMAC-SHA2
56 Credential=AKIAJ7CF6UGZCVXSCLCQ/20180817/us-east-1/s3/aws4_request,SignedHeaders=content-md5;content-type;host;x-amz-content-sha256;x-amz-date,Signature=813e6def2b9fe3262742a4d8e0da89f6037835237bae73668782651af3816c9b', 'x-amz-content-sha256': '179a18e3362ea6721bb5bda1e4240d2f884f261c2df88b4d8139a3c2a73f0598'}, body=(214 bytes)
DEBUG: ConnMan.put(): closing proxy connection (keep-alive not yet supported)
DEBUG: Response:
{'data': b'<?xml version="1.0" encoding="UTF-8"?>\n<Error><Code>MalformedXML'
         b'</Code><Message>The XML you provided was not well-formed or did not '
         b'validate against our published schema</Message><RequestId>F022EA8C11'
         b'DD8099</RequestId><HostId>GMyXX38iW30QQ9USgvi9q9V96/RPKtXAPYZZB6cLkr'
         b'+nNfyNvhrRqBnzvXSbzoynQlA0zdqjWzA=</HostId></Error>',
 'headers': {'connection': 'close',
             'content-type': 'application/xml',
             'date': 'Fri, 17 Aug 2018 08:29:14 GMT',
             'server': 'AmazonS3',
             'transfer-encoding': 'chunked',
             'x-amz-id-2': 'GMyXX38iW30QQ9USgvi9q9V96/RPKtXAPYZZB6cLkr+nNfyNvhrRqBnzvXSbzoynQlA0zdqjWzA=',
             'x-amz-request-id': 'F022EA8C11DD8099'},
 'reason': 'Bad Request',
 'status': 400}

Actions #1

Updated by Chang Liu over 5 years ago

RGW

DEBUG: Sending request method_string='PUT', uri='/lctest/?cors', headers={'content-type': 'application/xml', 'content-md5': 'geF9hvrm0nEhonXgMjwa1w==', 'x-amz-date': '20180817T100615Z', 'Authorization': 'AWS4-HMAC-SHA256 Credential=0555b35654ad1656d804/20180817/default/s3/aws4_request,SignedHeaders=content-md5;content-type;host;x-amz-content-sha256;x-amz-date,Signature=80f643bb17a59b2128fc098478885dd3db48e7f9d43354ce1ad8174d543eab8c', 'x-amz-content-sha256': '179a18e3362ea6721bb5bda1e4240d2f884f261c2df88b4d8139a3c2a73f0598'}, body=(214 bytes)
DEBUG: ConnMan.put(): connection put back to pool (http://127.0.0.1:8000#2)
DEBUG: Response:
{'data': b'',
 'headers': {'content-length': '0',
             'content-type': 'application/xml',
             'date': 'Fri, 17 Aug 2018 10:06:15 GMT',
             'x-amz-request-id': 'tx000000000000000000004-005b769e17-1091-default'},
 'reason': 'OK',
 'status': 200}

Actions #2

Updated by Casey Bodley over 5 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF